@@ -1863,6 +1863,7 @@ _GLIBCXX_BEGIN_NAMESPACE_CXX11
       void
       swap(match_results& __that)
       {
+	using std::swap;
 	_Base_type::swap(__that);
 	swap(_M_begin, __that._M_begin);
       }
